--- a/config.cfg
+++ b/config.cfg
@@ -150,6 +150,10 @@ cloud_providers:
   openstack:
     flavor_ram: ">=512"
     image:  Ubuntu-18.04
+  cloudstack:
+    size: Tiny
+    image: Linux Ubuntu 18.04 LTS 64-bit
+    disk: 10
   vultr:
     os: Ubuntu 18.04 x64
     size: 1024 MB RAM,25 GB SSD,1.00 TB BW
