--- a/roles/cloud-cloudstack/tasks/venv.yml
+++ b/roles/cloud-cloudstack/tasks/venv.yml
@@ -7,7 +7,7 @@
 
 - name: Install requirements
   pip:
-    name: sc
+    name: cs
     version: 2.5.8
     virtualenv: "{{ cloudstack_venv }}"
     virtualenv_python: python2.7
