--- a/roles/cloud-azure/tasks/main.yml
+++ b/roles/cloud-azure/tasks/main.yml
@@ -23,13 +23,10 @@
           client_id: "{{ client_id }}"
           subscription_id: "{{ subscription_id }}"
           resource_group_name: "{{ algo_server_name }}"
+          location: "{{ algo_region }}"
           parameters:
-            AlgoServerName:
-              value: "{{ algo_server_name }}"
             sshKeyData:
               value: "{{ lookup('file', '{{ SSH_keys.public }}') }}"
-            location:
-              value: "{{ algo_region }}"
             WireGuardPort:
               value: "{{ wireguard_port }}"
             vmSize:
