--- a/roles/cloud-cloudstack/defaults/main.yml
+++ b/roles/cloud-cloudstack/defaults/main.yml
@@ -1,2 +1,49 @@
 ---
 cloudstack_venv: "{{ playbook_dir }}/configs/.venvs/cloudstack"
+_cloudstack_zones: >
+    [
+        {
+        "allocationstate": "Enabled",
+        "dhcpprovider": "VirtualRouter",
+        "id": "1128bd56-b4d9-4ac6-a7b9-c715b187ce11",
+        "localstorageenabled": true,
+        "name": "ch-gva-2",
+        "networktype": "Basic",
+        "securitygroupsenabled": true,
+        "tags": [],
+        "zonetoken": "token"
+        },
+        {
+        "allocationstate": "Enabled",
+        "dhcpprovider": "VirtualRouter",
+        "id": "91e5e9e4-c9ed-4b76-bee4-427004b3baf9",
+        "localstorageenabled": true,
+        "name": "ch-dk-2",
+        "networktype": "Basic",
+        "securitygroupsenabled": true,
+        "tags": [],
+        "zonetoken": "token"
+        },
+        {
+        "allocationstate": "Enabled",
+        "dhcpprovider": "VirtualRouter",
+        "id": "4da1b188-dcd6-4ff5-b7fd-bde984055548",
+        "localstorageenabled": true,
+        "name": "at-vie-1",
+        "networktype": "Basic",
+        "securitygroupsenabled": true,
+        "tags": [],
+        "zonetoken": "token"
+        },
+        {
+        "allocationstate": "Enabled",
+        "dhcpprovider": "VirtualRouter",
+        "id": "35eb7739-d19e-45f7-a581-4687c54d6d02",
+        "localstorageenabled": true,
+        "name": "de-fra-1",
+        "networktype": "Basic",
+        "securitygroupsenabled": true,
+        "tags": [],
+        "zonetoken": "token"
+        }
+    ]
