updated instance size to be micro instead of tiny

--- a/config.cfg
+++ b/config.cfg
@@ -151,7 +151,7 @@ cloud_providers:
     flavor_ram: ">=512"
     image:  Ubuntu-18.04
   cloudstack:
-    size: Tiny
+    size: Micro
     image: Linux Ubuntu 18.04 LTS 64-bit
     disk: 10
   vultr:
