--- a/roles/common/tasks/ubuntu.yml
+++ b/roles/common/tasks/ubuntu.yml
@@ -25,12 +25,8 @@
       ignore_errors: true
 
     - name: Wait until SSH becomes ready...
-      local_action:
-        module: wait_for
-        port: 22
-        host: "{{ inventory_hostname }}"
-        search_regex: OpenSSH
-        delay: 10
+      wait_for_connection:
+        delay: 20
         timeout: 320
       when: reboot_required is defined and reboot_required.stdout == 'required'
       become: false
