add SSH access rules

--- a/roles/cloud-vultr/tasks/main.yml
+++ b/roles/cloud-vultr/tasks/main.yml
@@ -16,17 +16,19 @@
   - name: Creating firewall rules
     vr_firewall_rule:
       group: "{{ algo_server_name }}"
-      protocol: udp
+      protocol: "{{ item.protocol }}"
       port: "{{ item.port }}"
       ip_version: "{{ item.ip }}"
       cidr: "{{ item.cidr }}"
     with_items:
-    - { port: 500, ip: v4, cidr: "0.0.0.0/0" }
-    - { port: 500, ip: v6, cidr: "::/0" }
-    - { port: 4500, ip: v4, cidr: "0.0.0.0/0" }
-    - { port: 4500, ip: v6, cidr: "::/0" }
-    - { port: 51820, ip: v4, cidr: "0.0.0.0/0" }
-    - { port: 51820, ip: v6, cidr: "::/0" }
+    - { protocol: tcp, port: 22, ip: v4, cidr: "0.0.0.0/0" }
+    - { protocol: tcp, port: 22, ip: v6, cidr: "::/0" }
+    - { protocol: udp, port: 500, ip: v4, cidr: "0.0.0.0/0" }
+    - { protocol: udp, port: 500, ip: v6, cidr: "::/0" }
+    - { protocol: udp, port: 4500, ip: v4, cidr: "0.0.0.0/0" }
+    - { protocol: udp, port: 4500, ip: v6, cidr: "::/0" }
+    - { protocol: udp, port: 51820, ip: v4, cidr: "0.0.0.0/0" }
+    - { protocol: udp, port: 51820, ip: v6, cidr: "::/0" }
      
   - name: Creating a server
     vr_server:
