--- a/config.cfg
+++ b/config.cfg
@@ -129,18 +129,18 @@ cloud_providers:
     image: 18.04-LTS
   digitalocean:
     size: s-1vcpu-1gb
-    image: "ubuntu-18-04-x64"
+    image: "ubuntu-19-04-x64"
   ec2:
   # Change the encrypted flag to "true" to enable AWS volume encryption, for encryption of data at rest.
   # Warning: the Algo script will take approximately 6 minutes longer to complete.
     encrypted: false
     size: t2.micro
     image:
-      name: "ubuntu-bionic-18.04"
+      name: "ubuntu-disco-19.04"
       owner: "099720109477"
   gce:
     size: f1-micro
-    image: ubuntu-1804
+    image: ubuntu-1904
     external_static_ip: false
   lightsail:
     size: nano_1_0
@@ -153,7 +153,7 @@ cloud_providers:
     flavor_ram: ">=512"
     image:  Ubuntu-18.04
   vultr:
-    os: Ubuntu 18.04 x64
+    os: Ubuntu 19.04 x64
     size: 1024 MB RAM,25 GB SSD,1.00 TB BW
   local:
 
