--- a/roles/cloud-azure/tasks/main.yml
+++ b/roles/cloud-azure/tasks/main.yml
@@ -9,7 +9,7 @@
   - set_fact:
       algo_region: >-
         {% if region is defined %}{{ region }}
-        {%- elif _algo_region.user_input is defined and _algo_region.user_input != "" %}{{ azure_regions[_algo_region.user_input | int -1 ]['name'] }}
+        {%- elif _algo_region.user_input %}{{ azure_regions[_algo_region.user_input | int -1 ]['name'] }}
         {%- else %}{{ azure_regions[default_region | int - 1]['name'] }}{% endif %}
 
   - name: Create AlgoVPN Server
