--- a/roles/cloud-vultr/tasks/main.yml
+++ b/roles/cloud-vultr/tasks/main.yml
@@ -4,17 +4,17 @@
 
 - block:
   - name: Upload the SSH key
-    vr_ssh_key:
+    vultr_ssh_key:
       name: "{{ SSH_keys.comment }}"
       ssh_key: "{{ lookup('file', '{{ SSH_keys.public }}') }}"
     register: ssh_key
 
   - name: Creating a firewall group
-    vr_firewall_group:
+    vultr_firewall_group:
       name: "{{ algo_server_name }}"
  
   - name: Creating firewall rules
-    vr_firewall_rule:
+    vultr_firewall_rule:
       group: "{{ algo_server_name }}"
       protocol: "{{ item.protocol }}"
       port: "{{ item.port }}"
@@ -31,7 +31,7 @@
     - { protocol: udp, port: "{{ wireguard_port }}", ip: v6, cidr: "::/0" }
      
   - name: Creating a server
-    vr_server:
+    vultr_server:
       name: "{{ algo_server_name }}"
       hostname: "{{ algo_server_name }}"
       os: "{{ cloud_providers.vultr.os }}"
