generate service IPs dynamically

--- a/config.cfg
+++ b/config.cfg
@@ -100,8 +100,17 @@ dns_servers:
     - 2606:4700:4700::1111
     - 2606:4700:4700::1001
 
-# IP address for the local dns resolver
-local_service_ip: 172.16.0.1
+# Randomly generated IP address for the local dns resolver
+local_service_ip: >-
+  10.
+  {{- 255 | random(seed=algo_server_name + ansible_fqdn + 'second') }}.
+  {{- 255 | random(seed=algo_server_name + ansible_fqdn + 'third') }}.
+  {{- 255 | random(seed=algo_server_name + ansible_fqdn + 'fourth') }}
+local_service_ipv6: >-
+  FD{{ 99 | random(seed=algo_server_name + ansible_fqdn + 'first') }}:
+  {{- 9999 | random(seed=algo_server_name + ansible_fqdn + 'second') }}:
+  {{- 9999 | random(seed=algo_server_name + ansible_fqdn + 'third') }}:
+  {{- 9999 | random(seed=algo_server_name + ansible_fqdn + 'fourth') }}::1
 
 # Your Algo server will automatically install security updates. Some updates
 # require a reboot to take effect but your Algo server will not reboot itself
