exclude ipsec and wireguard ranges from the random service ip

--- a/config.cfg
+++ b/config.cfg
@@ -103,7 +103,7 @@ dns_servers:
 # Randomly generated IP address for the local dns resolver
 local_service_ip: >-
   10.
-  {{- 255 | random(seed=algo_server_name + ansible_fqdn + 'second') }}.
+  {{- 255 | random(start=20, seed=algo_server_name + ansible_fqdn + 'second') }}.
   {{- 255 | random(seed=algo_server_name + ansible_fqdn + 'third') }}.
   {{- 255 | random(seed=algo_server_name + ansible_fqdn + 'fourth') }}
 local_service_ipv6: >-
