--- a/config.cfg
+++ b/config.cfg
@@ -1,14 +1,13 @@
 ---
 
-# This is the list of user to generate.
+# This is the list of users to generate.
 # Every device must have a unique username.
 # You can generate up to 250 users at one time.
+# Usernames with leading 0's or containing only numbers should be escaped in double quotes, e.g. "000dan" or "123".
 users:
   - phone
   - laptop
   - desktop
-
-# NOTE: You must "escape" any usernames with leading 0's or containing only numbers, like "000dan" or "123"
 
 ### Advanced users only below this line ###
 
@@ -145,10 +144,6 @@ cloud_providers:
   ec2:
   # Change the encrypted flag to "true" to enable AWS volume encryption, for encryption of data at rest.
   # Warning: the Algo script will take approximately 6 minutes longer to complete.
-  # Also note that the documented AWS minimum permissions aren't sufficient.
-  # You will have to edit the AWS user policy documented at
-  # https://github.com/trailofbits/algo/blob/master/docs/cloud-amazon-ec2.md to also allow "ec2:CopyImage".
-  # See https://docs.aws.amazon.com/IAM/latest/UserGuide/access_policies_manage-edit.html
     encrypted: false
     size: t2.micro
     image:
