--- a/config.cfg
+++ b/config.cfg
@@ -126,7 +126,7 @@ SSH_keys:
 cloud_providers:
   azure:
     size: Basic_A0
-    image: 18.04-LTS
+    image: 19.04
   digitalocean:
     size: s-1vcpu-1gb
     image: "ubuntu-19-04-x64"
