--- a/config.cfg
+++ b/config.cfg
@@ -131,9 +131,12 @@ cloud_providers:
     size: s-1vcpu-1gb
     image: "ubuntu-18-04-x64"
   ec2:
-  # Change the encrypted flag to "true" to enable AWS volume encryption, for encryption of data at rest.
-  # Warning: the Algo script will take approximately 6 minutes longer to complete.
+    # Change the encrypted flag to "true" to enable AWS volume encryption, for encryption of data at rest.
+    # Warning: the Algo script will take approximately 6 minutes longer to complete.
     encrypted: false
+    # Set use_existing_eip to "true" if you want to use a pre-allocated Elastic IP
+    # Additional prompt will be raised to determine which IP to use
+    use_existing_eip: true
     size: t2.micro
     image:
       name: "ubuntu-bionic-18.04"
