--- a/users.yml
+++ b/users.yml
@@ -7,9 +7,22 @@
 
   tasks:
     - block:
+        - name: Get list of installed servers
+          shell: ls configs/
+          register: _directory_list
+
+        - name: Build list of installed servers
+          set_fact:
+            server_list: "{{ _directory_list.stdout_lines|replace('algo.pem.pub','')|replace('algo.pem','') }}"
+
         - name: Server address prompt
           pause:
-            prompt: "Enter the IP address of your server: (or use localhost for local installation)"
+            prompt: |
+              Select the server to update user list below:
+                {% for r in server_list %}
+                {% if r %}{{ loop.index }}. {{ r }}
+                {% endif -%}
+                {% endfor %}
           register: _server
           when: server is undefined
 
@@ -17,7 +30,7 @@
           set_fact:
             algo_server: >-
               {% if server is defined %}{{ server }}
-              {%- elif _server.user_input %}{{ _server.user_input }}
+              {%- elif _server.user_input %}{{ server_list[_server.user_input | int -1 ] }}
               {%- else %}omit{% endif %}
 
         - name: Import host specific variables
