--- a/config.cfg
+++ b/config.cfg
@@ -136,7 +136,7 @@ cloud_providers:
     encrypted: false
     # Set use_existing_eip to "true" if you want to use a pre-allocated Elastic IP
     # Additional prompt will be raised to determine which IP to use
-    use_existing_eip: true
+    use_existing_eip: false
     size: t2.micro
     image:
       name: "ubuntu-bionic-18.04"
