--- a/users.yml
+++ b/users.yml
@@ -8,29 +8,35 @@
   tasks:
     - block:
         - name: Get list of installed servers
-          command: ls configs/
-          register: _directory_list
+          find:
+            paths: configs/
+            depth: 2
+            recurse: true
+            hidden: true
+            patterns: ".config.yml"
+          register: _configs_list
 
         - name: Build list of installed servers
           set_fact:
-            server_list: "{{ _directory_list.stdout_lines|replace('algo.pem.pub','')|replace('algo.pem','') }}"
+            server_list: "{% if server_list is defined %}{{ server_list }},{% endif %}{{ item.path|replace('configs/','')|replace('/.config.yml','') }}"
+          with_items: "{{ _configs_list.files }}"
 
         - name: Server address prompt
           pause:
             prompt: |
               Select the server to update user list below:
-                {% for r in server_list %}
-                {% if r %}{{ loop.index }}. {{ r }}
-                {% endif -%}
+                {% for r in server_list.split(',') %}
+                {{ loop.index }}. {{ r }}
                 {% endfor %}
           register: _server
-          when: server is undefined
+      when: server is undefined
 
+    - block:
         - name: Set facts based on the input
           set_fact:
             algo_server: >-
               {% if server is defined %}{{ server }}
-              {%- elif _server.user_input %}{{ server_list[_server.user_input | int -1 ] }}
+              {%- elif _server.user_input %}{{ server_list.split(',')[_server.user_input | int -1 ] }}
               {%- else %}omit{% endif %}
 
         - name: Import host specific variables
